--- a/project.css
+++ b/project.css
@@ -1,5 +1,36 @@
+*{
+    all: unset; /*Fjerne all user agent stylesheet*/
+    display: revert; /*Den aktiverer display funktionen i user agent stylesheet*/
+    box-sizing: border-box; /*Bredde på et element er inklusiv padding og border*/
+}
 
+/*main section m. baggrundsbillede*/
 
-main{
-    background-image: url(cat.jpg);
+html{
+    background: url(cat.jpg) no-repeat center center fixed;
+    background-size: cover;
+}
+
+.main-flex{
+    height: 100wh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.middel-text{
+    display: flex;
+    flex-direction: column;
+    align-items: center;    
+}
+
+.free-button{
+    display: flex;
+    justify-content: center;
+}
+
+.credit{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
