--- a/project.css
+++ b/project.css
@@ -6,16 +6,32 @@
 
 /*main section m. baggrundsbillede*/
 
+h1{
+    font-size: 3.5rem;
+}
+
+h3{
+    font-size: 1.625rem;
+}
+
+
 html{
     background: url(cat.jpg) no-repeat center center fixed;
     background-size: cover;
 }
 
+body{
+    height: 100vh;
+}
+
 .main-flex{
-    height: 100wh;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-around;
+    align-items: center;
+    height: 100%;
+    font-family: Arial, Helvetica, sans-serif;
+    color: white;
 }
 
 .middel-text{
@@ -27,6 +43,15 @@ html{
 .free-button{
     display: flex;
     justify-content: center;
+    align-items: center;
+    border-radius: 5px;
+    height: 4rem;
+    width: 12.5rem;
+    color: #000;
+    background-color: #FFF;
+    font-weight: 600;
+    padding: 0 1.25rem;
+    font-size: 1.5rem;
 }
 
 .credit{
