--- a/project.css
+++ b/project.css
@@ -8,10 +8,12 @@
 
 h1{
     font-size: 3.5rem;
+    font-weight: 600;
 }
 
 h3{
     font-size: 1.625rem;
+    font-weight: 600;
 }
 
 
@@ -24,7 +26,7 @@ body{
     height: 100vh;
 }
 
-.main-flex{
+.main-container{
     display: flex;
     flex-direction: column;
     justify-content: space-around;
@@ -34,10 +36,21 @@ body{
     color: white;
 }
 
-.middel-text{
+.middel-text-container{
     display: flex;
     flex-direction: column;
-    align-items: center;    
+    align-items: center;
+    justify-content: space-between;
+    padding: 0 30%;  
+    height: 18.5rem;
+}
+
+.text{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+    height: 100%;
 }
 
 .free-button{
@@ -49,7 +62,6 @@ body{
     width: 12.5rem;
     color: #000;
     background-color: #FFF;
-    font-weight: 600;
     padding: 0 1.25rem;
     font-size: 1.5rem;
 }
